cabal-version:       3.0
name:                iris
version:             0.0.0.0
synopsis:            Haskell CLI framework
description:
    Haskell CLI framework.
    See [README.md](https://github.com/chshersh/iris#iris) for more details.
homepage:            https://github.com/chshersh/iris
bug-reports:         https://github.com/chshersh/iris/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov
maintainer:          Dmitrii Kovanikov <kovanikov@gmail.com>
copyright:           2022 Dmitrii Kovanikov
category:            CLI,Framework
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/chshersh/iris.git

common common-options
  build-depends:       base >= 4.14 && < 4.15

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       StrictData
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:
    Iris
      Iris.App
      Iris.Colour
        Iris.Colour.Formatting
        Iris.Colour.Mode
      Iris.Env

  build-depends:
    , ansi-terminal        ^>= 0.11
    , bytestring            >= 0.10 && < 0.12
    , mtl                   >= 2.2  && < 2.4
    , optparse-applicative ^>= 0.17

executable iris-example
  import:              common-options
  hs-source-dirs:      app

  main-is:             Main.hs
  autogen-modules:     Paths_iris
  other-modules:       Paths_iris

  build-depends:
     , iris
     , colourista ^>= 0.1
     , mtl

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite iris-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       iris
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
