cabal-version:       3.0
name:                simple-grep
version:             0.0.0.0
build-type:          Simple

common common-options
  build-depends:       base >= 4.14 && < 4.18

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:       -Winvalid-haddock
  if impl(ghc >= 9.2)
    ghc-options:       -Wredundant-bang-patterns
                       -Woperator-whitespace
  if impl(ghc >= 9.4)
    ghc-options:       -Wredundant-strictness-flags

  default-language:    Haskell2010

executable simple-grep
  import:              common-options

  if os(windows)
    buildable:         False

  main-is:             Main.lhs
  autogen-modules:     Paths_simple_grep
  other-modules:     Paths_simple_grep

  build-depends:
     , base
     , colourista
     , iris
     , mtl
     , optparse-applicative
     , text

  build-tool-depends:  markdown-unlit:markdown-unlit

  ghc-options:
      -pgmL markdown-unlit
      -threaded
